# CircuitBench-An-Open-Benchmark-for-Surrogate-Models-in-Electrical-Circuit-Design-

./: .gitignore  README.md  bandit.json  fix_codespace.sh  fix_project.sh  fix_w391.py  olidate diagnostics"  pyproject.toml  ruff.toml  run_cli.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: documentation.md  feature_request.md  performance_issue.md  question.md
.github/workflows/: ci.yaml  ci.yml  tests.yml
circuits/: circuit_registry.csv
datasets/analog/: dataset_card.md
datasets/baselines/: dataset_card.md
datasets/benchmark_configs/: dataset_card.md
datasets/benchmark_suites/: dataset_card.md
datasets/cache/: dataset_card.md
datasets/data_cards/: data_card.md
datasets/examples/: CMOS_Inverter_Example.ipynb  Fault_Detection_Example.ipynb  example_usage.ipynb
datasets/manifests/: dataset_card.md
datasets/unit_tests/: dataset_card
datasets/validation/: run_validation.py
datasets/version_control/: dataset_card.md
datasets/versions/: datasets_card.md
docs/: benchmark_experiments.md  benchmark_manifest.md  benchmark_statistics.md  installation.md  metadata_schema.md  quickstart.md  roadmap.md
docs/api/: benchmark.md  visualization.md
docs/developer_guide/: adding_benchmarks.md  coding_standards.md  testing.md
docs/theory/: analog.md  digital.md  machine_learning.md  passive.md  power.md  rf.md
docs/tutorials/: tutorial_03_train_model.md  tutorial_04_add_circuit.md  tutorial_05_submit_results.md
docs/user_guide/: circuits.md  simulations.md
notebooks/: 10_Leaderboard_Analysis.ipynb  1_Getting_Started.ipynb  2_Loading_Datasets.ipynb  3_Running_SPICE_Simulations.ipynb  4_Training_Baseline_Models.ipynb  5_Evaluating_Models.ipynb  6_SHAP_Explainability.ipynb  7_Hyperparameter_Optimization.ipynb  8_Adding_A_New_Dataset.ipynb  9_Creating_a_New_Benchmark.ipynb
results/baseline_results/: template.csv
results/figures/: README.md
results/statistics/: summary.md
src/api/: __init__.py  models.py  routes.py  schemas.py  server.py
src/benchmark/: README.md  __init__.py  advanced_runner.py  benchmark_runner.py  benchmark_suite.py  comparison.py  cross_validation.py  evaluator.py  experiment_manager.py  export.py  leaderboard.py  plots.py  ranking.py  registry.py  report.py  reporting.py  runner.py
src/cli/: create.py  doctor.py  main.py  printer.py  run.py
src/explainability/: __init__.py  ice.py  partial_dependence.py  permutation_importance.py  (+1 more)
tests/: conftest.py  contest.py  test_benchmark.py  test_benchmark_runner.py  test_cli.py  test_datasets.py  test_explainability.py  test_metrics.py  test_models.py
(+142 files in other folders)
