[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "circuitbench"
version = "1.0.0"
description = "A comprehensive benchmarking framework for machine learning and computational intelligence."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

authors = [
    {name = "Asif Kazi"}
]

keywords = [
    "machine-learning",
    "benchmark",
    "artificial-intelligence",
    "deep-learning",
    "classification",
    "regression",
    "evaluation",
    "benchmarking",
    "statistics",
    "explainable-ai",
    "calibration",
    "research-software",
    "scientific-computing"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]

explainability = [
    "shap>=0.45"
]

development = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "ruff",
    "flake8",
    "mypy",
    "pre-commit"
]

docs = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-autodoc-typehints"
]

[project.urls]
Homepage = "https://github.com/ksaad20/Circuit-Bench"
Repository = "https://github.com/ksaad20/Circuit-Bench"
Issues = "https://github.com/ksaad20/Circuit-Bench/issues"

[tool.black]
line-length = 88
target-version = [
    "py310",
    "py311",
    "py312"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.setuptools]
packages = ["circuitbench"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-ra"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12"
rich = "^13.7"

[project.scripts]
circuitbench = "cli.main:main"
